appId: com.anthonyostia.castaway
---
- launchApp:
    clearState: true
- tapOn:
    text: "castaway"
    index: 1
- tapOn: "Close"
- tapOn: "Email Address"
- inputText: test123@yahoo.com
- tapOn:
    text: "Password"
    index: 1
- inputText: A1234567sds8
- pressKey: "enter"
- tapOn: "Log In"
- assertVisible: "Home, tab, 1 of 4"
- assertVisible: "Library, tab, 2 of 4"
- assertVisible: "Search, tab, 3 of 4"
- assertVisible: "Settings, tab, 4 of 4"

